--- a/android/engine/src/main/res/layout/activity_questionnaire.xml
+++ b/android/engine/src/main/res/layout/activity_questionnaire.xml
@@ -23,9 +23,10 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_edit_qr"
         tools:layout="@layout/questionnaire_fragment" />
@@ -38,8 +39,6 @@
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
-        android:background="?attr/colorPrimary"
-        android:drawablePadding="5dp"
         android:fontFamily="sans-serif-medium"
         android:padding="10dp"
         android:text="@string/edit"
@@ -48,35 +47,6 @@
         android:textSize="18sp"
         android:visibility="gone"
         android:layout_gravity="bottom|start"
-        app:layout_constraintBottom_toTopOf="@id/btn_save_client_info" />
-
-    <Button
-        android:id="@+id/btn_save_client_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:background="?attr/colorPrimary"
-        android:drawablePadding="5dp"
-        android:fontFamily="sans-serif-medium"
-        android:padding="10dp"
-        android:text="@string/str_save"
-        android:textAllCaps="true"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:layout_gravity="bottom|start"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:visibility="visible"
-        android:layout_gravity="bottom|start"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
