--- a/android/quest/src/main/res/xml/network_security_config.xml
+++ b/android/quest/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">192.168.19.63</domain>
+        <domain includeSubdomains="true">smartregister.org</domain>
+        <domain includeSubdomains="true">mpower-social.com</domain>
     </domain-config>
 </network-security-config>
