--- a/android/engine/src/main/res/values/styles.xml
+++ b/android/engine/src/main/res/values/styles.xml
@@ -59,7 +59,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorSecondary">@color/white</item>
-        <item name="questionnaireSubmitButtonStyle">@style/Quest.Questionnaire.SubmitButtonStyle
+        <item name="questionnaireSubmitButtonStyle">@style/Quest.Questionnaire.SubmitButtonStyle</item>
+        <item name="questionnaireGroupTypeQuestionTextStyle">
+            @style/TextAppearance.Material3.HeadlineMedium
+        </item>
+        <item name="questionnaireQuestionTextStyle">
+            @style/TextAppearance.Material3.BodyLarge
         </item>
     </style>
     <style name="Quest.Questionnaire.SubmitButtonStyle" parent="Questionnaire.SubmitButtonStyle">
