Fix image size and color
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/res/drawable/ic_cancel.xml
+++ b/android/quest/src/main/res/drawable/ic_cancel.xml
@@ -1,10 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#7A7A7A"
-        android:fillType="evenOdd"
-        android:pathData="M15.5892,5.5892C15.9147,5.2638 15.9147,4.7361 15.5892,4.4107C15.2638,4.0853 14.7362,4.0853 14.4107,4.4107L10,8.8215L5.5893,4.4107C5.2638,4.0853 4.7362,4.0853 4.4107,4.4107C4.0853,4.7361 4.0853,5.2638 4.4107,5.5892L8.8215,10L4.4107,14.4107C4.0853,14.7361 4.0853,15.2638 4.4107,15.5892C4.7362,15.9147 5.2638,15.9147 5.5893,15.5892L10,11.1785L14.4107,15.5892C14.7362,15.9147 15.2638,15.9147 15.5892,15.5892C15.9147,15.2638 15.9147,14.7361 15.5892,14.4107L11.1785,10L15.5892,5.5892Z" />
+<vector android:height="24dp" android:viewportHeight="1024"
+    android:viewportWidth="1024" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M842.9,778.1 L576.8,512 842.9,245.9c8.7,-8.7 13.4,-20.2 13.4,-32.5 -0,-12.2 -4.8,-23.7 -13.4,-32.3 -8.7,-8.7 -20.1,-13.5 -32.4,-13.5 -12.3,0 -23.8,4.8 -32.5,13.4L512,447.1 245.9,181.1c-8.7,-8.7 -20.2,-13.4 -32.4,-13.4 -12.2,0 -23.8,4.8 -32.4,13.4 -8.7,8.6 -13.4,20.1 -13.4,32.4 -0,12.3 4.8,23.8 13.4,32.5l266.1,266.1L181.1,778.1c-8.7,8.7 -13.4,20.2 -13.4,32.4 0,12.2 4.8,23.8 13.4,32.4 8.7,8.7 20.2,13.4 32.4,13.4 12.2,0 23.8,-4.8 32.4,-13.4l266.1,-266.1 266.1,266.1c8.7,8.7 20.2,13.4 32.4,13.4 12.3,-0 23.7,-4.8 32.4,-13.4C860.8,825.1 860.8,796 842.9,778.1z"/>
 </vector>
