--- a/android/engine/src/main/res/layout/activity_questionnaire.xml
+++ b/android/engine/src/main/res/layout/activity_questionnaire.xml
@@ -17,25 +17,24 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context="org.smartregister.fhircore.engine.org.smartregister.fhircore.quest.ui.questionnaire.QuestionnaireActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_edit_qr"/>
+        app:layout_constraintBottom_toTopOf="@id/btn_edit_qr"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <Button
         android:id="@+id/btn_edit_qr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_gravity="bottom|start"
         android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:fontFamily="sans-serif-medium"
         android:padding="10dp"
         android:text="@string/edit"
@@ -43,7 +42,6 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         android:visibility="gone"
-        android:layout_gravity="bottom|start"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <ProgressBar
@@ -51,10 +49,10 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:visibility="gone"
         android:layout_gravity="bottom|start"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
