--- a/android/engine/src/main/res/values/styles.xml
+++ b/android/engine/src/main/res/values/styles.xml
@@ -17,8 +17,6 @@
         <item name="android:listDivider">@color/white_slightly_opaque</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
         <item name="questionnaire_theme">@style/AppTheme.Questionnaire</item>
-        <!-- This Theme override seems to be causing the radio buttons to NOT render
-        <item name="questionnaire_theme">@style/Theme.MaterialComponents.Light.DarkActionBar</item> -->
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -59,10 +57,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorSecondary">@color/white</item>
-        <item name="questionnaireSubmitButtonStyle">@style/Quest.Questionnaire.SubmitButtonStyle
-        </item>
+        <item name="questionnaireSubmitButtonStyle">@style/AppTheme.SubmitButtonStyle</item>
     </style>
-    <style name="Quest.Questionnaire.SubmitButtonStyle" parent="Questionnaire.SubmitButtonStyle">
+
+    <style name="AppTheme.SubmitButtonStyle" parent="Questionnaire.SubmitButtonStyle">
         <item name="android:text">@string/str_save</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:layout_marginVertical">15dp</item>
@@ -75,5 +73,4 @@
         <item name="android:textSize">18sp</item>
         <item name="android:layout_gravity">bottom|start</item>
     </style>
-
 </resources>
