--- a/android/quest/src/main/res/navigation/application_nav_graph.xml
+++ b/android/quest/src/main/res/navigation/application_nav_graph.xml
@@ -78,4 +78,13 @@
             app:argType="string"
             app:nullable="false" />
     </fragment>
+
+    <fragment
+        android:id="@+id/questionnaireFragment"
+        android:name="org.smartregister.fhircore.quest.ui.questionnaire.QuestionnaireFragment">
+        <argument
+            android:name="questionnaireConfig"
+            app:argType="org.smartregister.fhircore.engine.configuration.QuestionnaireConfig"
+            app:nullable="true" />
+    </fragment>
 </navigation>
