--- a/android/quest/src/main/res/values-night/themes.xml
+++ b/android/quest/src/main/res/values-night/themes.xml
@@ -1,24 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Fhircoreandroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.FhirCoreAndroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-    </style>
-    <style name="QuestBlue" parent="AppTheme.NoActionBar">
-        <item name="colorPrimary">@color/dodger_blue</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-    </style>
-    <style name="QuestGray" parent="AppTheme.NoActionBar">
-        <item name="colorPrimary">@color/light_gray</item>
-        <item name="colorPrimaryDark">@color/gray</item>
     </style>
 </resources>
