Pass practitioner id to measureReportViewModel

--- a/android/quest/src/main/res/navigation/application_nav_graph.xml
+++ b/android/quest/src/main/res/navigation/application_nav_graph.xml
@@ -77,5 +77,10 @@
             android:defaultValue=""
             app:argType="string"
             app:nullable="false" />
+        <argument
+            android:name="resourceId"
+            android:defaultValue=""
+            app:argType="string"
+            app:nullable="false" />
     </fragment>
 </navigation>
