--- a/android/quest/src/mwcoreDev/res/xml/network_security_config.xml
+++ b/android/quest/src/mwcoreDev/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">fhir-dev.d-tree.org</domain>
-        <domain includeSubdomains="true">52.88.217.146</domain>
+        <domain includeSubdomains="true">fhir-proxy-dev-1.d-tree.org</domain>
     </domain-config>
 </network-security-config>
