--- a/android/dataclerk/src/main/res/xml/network_security_config.xml
+++ b/android/dataclerk/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">fhir-dev.d-tree.org</domain>
         <domain includeSubdomains="true">fhir-proxy-dev-1.d-tree.org</domain>
+        <domain includeSubdomains="true">fhir-mwcore-staging.d-tree.org</domain>
+        <domain includeSubdomains="true">fhir.d-tree.org</domain>
     </domain-config>
 </network-security-config>
