Fix MediaView sizing bug and blurry image when going back pages from different image

--- a/android/engine/src/main/res/values/styles.xml
+++ b/android/engine/src/main/res/values/styles.xml
@@ -65,6 +65,7 @@
             @style/TextAppearance.Material3.BodyLarge
         </item>
         <item name="questionnaireHelpHeaderStyle">@style/AppTheme.HelpHeaderStyle</item>
+        <item name="questionnaireMediaImageStyle">@style/AppTheme.MediaImageStyle</item>
     </style>
 
     <style name="AppTheme.SubmitButtonStyle" parent="Questionnaire.SubmitButtonStyle">
@@ -83,6 +84,22 @@
 
     <style name="AppTheme.HelpHeaderStyle" parent="TextAppearance.Material3.TitleSmall">
         <item name="android:visibility">invisible</item>
+    </style>
+
+    <style name="AppTheme.MediaImageStyle" parent="">
+        <item name="android:layout_gravity">center</item>
+        <item
+            name="android:layout_marginTop"
+            >@dimen/item_media_image_margin_vertical</item>
+        <item
+            name="android:layout_marginBottom"
+            >@dimen/item_media_image_margin_vertical</item>
+        <item
+            name="android:layout_marginStart"
+            >@dimen/item_media_image_margin_horizontal</item>
+        <item
+            name="android:layout_marginEnd"
+            >@dimen/item_media_image_margin_horizontal</item>
     </style>
 
 </resources>
