--- a/android/quest/src/main/res/navigation/application_nav_graph.xml
+++ b/android/quest/src/main/res/navigation/application_nav_graph.xml
@@ -83,4 +83,19 @@
             app:argType="string"
             app:nullable="false" />
     </fragment>
+
+    <fragment
+        android:id="@+id/otherReportFragment"
+        android:name="org.smartregister.fhircore.quest.ui.report.other.OtherReportFragment">
+        <argument
+            android:name="reportId"
+            android:defaultValue=""
+            app:argType="string"
+            app:nullable="false" />
+        <argument
+            android:name="resourceId"
+            android:defaultValue=""
+            app:argType="string"
+            app:nullable="false" />
+    </fragment>
 </navigation>
