--- a/android/quest/src/main/res/layout/questionnaire_activity.xml
+++ b/android/quest/src/main/res/layout/questionnaire_activity.xml
@@ -13,7 +13,38 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:minHeight="?android:attr/actionBarSize"
-            app:titleTextColor="@color/white" />
+            app:titleTextColor="@color/white">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/questionnaireTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                   android:layout_toStartOf="@+id/clearAll"
+                    android:paddingStart="@dimen/item_margin_horizontal"
+                    android:paddingEnd="@dimen/item_margin_horizontal"
+                    android:text="Register so many many patients until elpsis is displayed"
+                    android:maxLines="1"
+                    android:ellipsize="middle"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/clearAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:paddingStart="@dimen/item_margin_horizontal"
+                    android:paddingEnd="@dimen/item_margin_horizontal"
+                    android:text="@string/clear_all"
+                    android:visibility="visible"
+                    android:textColor="@color/white" />
+            </RelativeLayout>
+        </androidx.appcompat.widget.Toolbar>
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/container"
