Store Notification as FHIR Resource (MessageDefinition) and Show

--- a/android/quest/src/main/res/navigation/application_nav_graph.xml
+++ b/android/quest/src/main/res/navigation/application_nav_graph.xml
@@ -42,6 +42,21 @@
     </fragment>
 
     <fragment
+        android:id="@+id/notificationFragment"
+        android:name="org.smartregister.fhircore.quest.ui.notification.NotificationFragment">
+        <argument
+            android:name="notificationId"
+            android:defaultValue=""
+            app:argType="string"
+            app:nullable="false" />
+        <argument
+            android:name="params"
+            android:defaultValue="@null"
+            app:argType="org.smartregister.fhircore.engine.domain.model.ActionParameter[]"
+            app:nullable="true" />
+    </fragment>
+
+    <fragment
         android:id="@+id/profileFragment"
         android:name="org.smartregister.fhircore.quest.ui.profile.ProfileFragment">
         <argument
